--- a/index.html
+++ b/index.html
@@ -4,13 +4,40 @@
         <meta charset=utf-8>
         <title>bathymetry</title>
         <style>
+            * {
+                color: white;
+                font-family: Helvetica
+            }
             body { margin: 0; }
             canvas { width: 100%; height: 100% }
+
+            .floater {
+                position: fixed;
+                background-color: #444c;
+                padding: 10px;
+            }
+
+            #header {
+                top: 10px;
+                left: 10px;
+
+            }
+
+            #message {
+                top: 10px;
+                right: 10px;
+            }
         </style>
         <script src="node_modules/three/build/three.js"></script>
         <script src="node_modules/three/examples/js/controls/OrbitControls.js"></script>
+        <script src="node_modules/zepto/dist/zepto.min.js"></script>
     </head>
     <body>
+        <div id="header" class="floater">
+            <h1>Bathymetry</h1>
+            <h2>Tetiana Vaysleva</h2>
+        </div>
+        <div id="message" class="floater">Loading...</div>
         <script>
             const parseData = data =>
                 data.map(row => row
@@ -134,11 +161,28 @@
                 render();
             }
 
-            fetch("data/low res.asc", { method: "get" })
-                .then(response => response.json())
-                .then(renderData)
-                .catch(err => {
-                    throw new Error(err); });
+            Zepto($ => {
+                const notify = message =>
+                    $("#message").text(message);
+
+                notify("Fetching data...");
+                fetch("data/low res.asc", { method: "get" })
+                    .then(response => {
+                        notify("Parsing...");
+                        return response.json();
+                    })
+                    .then(data => {
+                        notify("Rendering...");
+                        return renderData(data);
+                    })
+                    .then(() =>
+                        notify("Ready"))
+                    .catch(err => {
+                        notify("Error!");
+                        throw new Error(err); });
+            });
+
+
         </script>
     </body>
 </html>
