--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
 
                 //this determines what it looks like. phong is a kind of shader
                 var material = new THREE.MeshPhongMaterial({
-                    color: "gray",
+                    color: "gray",// <------ could that be variable? 
+                    // if x>= 0 colorRGB = 195,177,134
+                    // else if x>=-25 colorRGB = 64,224,208
+                    // else if x>=-400 colorRGB = 60,191,236
+                    // else if x>=-1000 colorRGB = 60,103,236
+                    // else if x>=-4000 colorRBG = 30,51,118
+                    // else (if x<4000 ) colorRGB = 15,25,59
+                  
                     //lets have it be visible from both sides
                     side: THREE.DoubleSide
                 });
