--- a/transects/transects.html
+++ b/transects/transects.html
@@ -4,25 +4,771 @@
         <title>transects</title>
 
         <link href="../node_modules/c3/c3.css" rel="stylesheet">
+        <script
+            src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous"></script>
         <script src="https://d3js.org/d3.v3.min.js"></script>
         <script src="../node_modules/c3/c3.js"></script>
+        <style type="text/css">
+            .c3-target-floor  path.c3-shape.c3-shape.c3-area.c3-area-floor {
+                /*opacity: 1;
+                color: rgb(63, 126, 193);*/
+            }
+        </style>
     </head>
     <body>
         <div id="chart"></div>
 
         <script type="text/javascript">
-            const bands = {
-                6: { 0: 762, 11.03: 800, 1.75: 768 },
-                8: { 0: 665, 11.03: 703, 1.75: 671 },
-                10: { 0: 509, 11.03: 547, 1.75: 515 },
-                12: { 0: 472, 11.03: 510, 1.75: 478 },
-                14: { 0: 369, 11.03: 407, 1.75: 375 },
-                16: { 0: 293, 1.75: 299, 11.03: 331 },
-                18: { 0: 258, 1.75: 260, 11.03: 271 },
-                20: { 0: 183, 1.75: 189, 11.03: 222 },
-                22: { 0: 150, 1.75: 154, 11.03: 174 },
-                24: { 0: 91, 1.75: 99, 11.03: 141 },
-                26: { 0: 9, 1.75: 9, 11.03: 99 } };
+            const bands = { '6':
+   { '0': 762,
+     '11.03': '800',
+     '1.75': 768,
+     '0.00': 762,
+     '0.18': 763,
+     '0.35': 763,
+     '0.53': 764,
+     '0.70': 764,
+     '0.88': 765,
+     '1.05': 766,
+     '1.23': 766,
+     '1.41': 767,
+     '1.58': 767,
+     '1.76': 768,
+     '1.93': 769,
+     '2.11': 769,
+     '2.28': 770,
+     '2.46': 770,
+     '2.64': 771,
+     '2.81': 772,
+     '2.99': 772,
+     '3.16': 773,
+     '3.34': 773,
+     '3.51': 774,
+     '3.69': 775,
+     '3.87': 775,
+     '4.04': 776,
+     '4.22': 777,
+     '4.39': 777,
+     '4.57': 778,
+     '4.74': 778,
+     '4.92': 779,
+     '5.10': 780,
+     '5.27': 780,
+     '5.45': 781,
+     '5.62': 781,
+     '5.80': 782,
+     '5.97': 783,
+     '6.15': 783,
+     '6.33': 784,
+     '6.50': 784,
+     '6.68': 785,
+     '6.85': 786,
+     '7.03': 786,
+     '7.20': 787,
+     '7.38': 787,
+     '7.56': 788,
+     '7.73': 789,
+     '7.91': 789,
+     '8.08': 790,
+     '8.26': 790,
+     '8.44': 791,
+     '8.61': 792,
+     '8.79': 792,
+     '8.96': 793,
+     '9.14': 793,
+     '9.31': 794,
+     '9.49': 795,
+     '9.67': 795,
+     '9.84': 796,
+     '10.02': 797,
+     '10.19': 797,
+     '10.37': 798,
+     '10.54': 798,
+     '10.72': 799,
+     '10.90': 800,
+     '11.07': 800 },
+  '8':
+   { '0': 665,
+     '11.03': '703',
+     '1.75': 671,
+     '0.00': 665,
+     '0.18': 666,
+     '0.35': 666,
+     '0.53': 667,
+     '0.70': 667,
+     '0.88': 668,
+     '1.05': 669,
+     '1.23': 669,
+     '1.41': 670,
+     '1.58': 670,
+     '1.76': 671,
+     '1.93': 672,
+     '2.11': 672,
+     '2.28': 673,
+     '2.46': 673,
+     '2.64': 674,
+     '2.81': 675,
+     '2.99': 675,
+     '3.16': 676,
+     '3.34': 676,
+     '3.51': 677,
+     '3.69': 678,
+     '3.87': 678,
+     '4.04': 679,
+     '4.22': 680,
+     '4.39': 680,
+     '4.57': 681,
+     '4.74': 681,
+     '4.92': 682,
+     '5.10': 683,
+     '5.27': 683,
+     '5.45': 684,
+     '5.62': 684,
+     '5.80': 685,
+     '5.97': 686,
+     '6.15': 686,
+     '6.33': 687,
+     '6.50': 687,
+     '6.68': 688,
+     '6.85': 689,
+     '7.03': 689,
+     '7.20': 690,
+     '7.38': 690,
+     '7.56': 691,
+     '7.73': 692,
+     '7.91': 692,
+     '8.08': 693,
+     '8.26': 693,
+     '8.44': 694,
+     '8.61': 695,
+     '8.79': 695,
+     '8.96': 696,
+     '9.14': 696,
+     '9.31': 697,
+     '9.49': 698,
+     '9.67': 698,
+     '9.84': 699,
+     '10.02': 700,
+     '10.19': 700,
+     '10.37': 701,
+     '10.54': 701,
+     '10.72': 702,
+     '10.90': 703,
+     '11.07': 703 },
+  '10':
+   { '0': 509,
+     '11.03': '547',
+     '1.75': 515,
+     '0.00': 509,
+     '0.18': 510,
+     '0.35': 510,
+     '0.53': 511,
+     '0.70': 511,
+     '0.88': 512,
+     '1.05': 513,
+     '1.23': 513,
+     '1.41': 514,
+     '1.58': 514,
+     '1.76': 515,
+     '1.93': 516,
+     '2.11': 516,
+     '2.28': 517,
+     '2.46': 517,
+     '2.64': 518,
+     '2.81': 519,
+     '2.99': 519,
+     '3.16': 520,
+     '3.34': 520,
+     '3.51': 521,
+     '3.69': 522,
+     '3.87': 522,
+     '4.04': 523,
+     '4.22': 524,
+     '4.39': 524,
+     '4.57': 525,
+     '4.74': 525,
+     '4.92': 526,
+     '5.10': 527,
+     '5.27': 527,
+     '5.45': 528,
+     '5.62': 528,
+     '5.80': 529,
+     '5.97': 530,
+     '6.15': 530,
+     '6.33': 531,
+     '6.50': 531,
+     '6.68': 532,
+     '6.85': 533,
+     '7.03': 533,
+     '7.20': 534,
+     '7.38': 534,
+     '7.56': 535,
+     '7.73': 536,
+     '7.91': 536,
+     '8.08': 537,
+     '8.26': 537,
+     '8.44': 538,
+     '8.61': 539,
+     '8.79': 539,
+     '8.96': 540,
+     '9.14': 540,
+     '9.31': 541,
+     '9.49': 542,
+     '9.67': 542,
+     '9.84': 543,
+     '10.02': 544,
+     '10.19': 544,
+     '10.37': 545,
+     '10.54': 545,
+     '10.72': 546,
+     '10.90': 547,
+     '11.07': 547 },
+  '12':
+   { '0': 472,
+     '11.03': '510',
+     '1.75': 478,
+     '0.00': 472,
+     '0.18': 473,
+     '0.35': 473,
+     '0.53': 474,
+     '0.70': 474,
+     '0.88': 475,
+     '1.05': 476,
+     '1.23': 476,
+     '1.41': 477,
+     '1.58': 477,
+     '1.76': 478,
+     '1.93': 479,
+     '2.11': 479,
+     '2.28': 480,
+     '2.46': 480,
+     '2.64': 481,
+     '2.81': 482,
+     '2.99': 482,
+     '3.16': 483,
+     '3.34': 483,
+     '3.51': 484,
+     '3.69': 485,
+     '3.87': 485,
+     '4.04': 486,
+     '4.22': 487,
+     '4.39': 487,
+     '4.57': 488,
+     '4.74': 488,
+     '4.92': 489,
+     '5.10': 490,
+     '5.27': 490,
+     '5.45': 491,
+     '5.62': 491,
+     '5.80': 492,
+     '5.97': 493,
+     '6.15': 493,
+     '6.33': 494,
+     '6.50': 494,
+     '6.68': 495,
+     '6.85': 496,
+     '7.03': 496,
+     '7.20': 497,
+     '7.38': 497,
+     '7.56': 498,
+     '7.73': 499,
+     '7.91': 499,
+     '8.08': 500,
+     '8.26': 500,
+     '8.44': 501,
+     '8.61': 502,
+     '8.79': 502,
+     '8.96': 503,
+     '9.14': 503,
+     '9.31': 504,
+     '9.49': 505,
+     '9.67': 505,
+     '9.84': 506,
+     '10.02': 507,
+     '10.19': 507,
+     '10.37': 508,
+     '10.54': 508,
+     '10.72': 509,
+     '10.90': 510,
+     '11.07': 510 },
+  '14':
+   { '0': 369,
+     '11.03': '407',
+     '1.75': 375,
+     '0.00': 369,
+     '0.18': 370,
+     '0.35': 370,
+     '0.53': 371,
+     '0.70': 371,
+     '0.88': 372,
+     '1.05': 373,
+     '1.23': 373,
+     '1.41': 374,
+     '1.58': 374,
+     '1.76': 375,
+     '1.93': 376,
+     '2.11': 376,
+     '2.28': 377,
+     '2.46': 377,
+     '2.64': 378,
+     '2.81': 379,
+     '2.99': 379,
+     '3.16': 380,
+     '3.34': 380,
+     '3.51': 381,
+     '3.69': 382,
+     '3.87': 382,
+     '4.04': 383,
+     '4.22': 384,
+     '4.39': 384,
+     '4.57': 385,
+     '4.74': 385,
+     '4.92': 386,
+     '5.10': 387,
+     '5.27': 387,
+     '5.45': 388,
+     '5.62': 388,
+     '5.80': 389,
+     '5.97': 390,
+     '6.15': 390,
+     '6.33': 391,
+     '6.50': 391,
+     '6.68': 392,
+     '6.85': 393,
+     '7.03': 393,
+     '7.20': 394,
+     '7.38': 394,
+     '7.56': 395,
+     '7.73': 396,
+     '7.91': 396,
+     '8.08': 397,
+     '8.26': 397,
+     '8.44': 398,
+     '8.61': 399,
+     '8.79': 399,
+     '8.96': 400,
+     '9.14': 400,
+     '9.31': 401,
+     '9.49': 402,
+     '9.67': 402,
+     '9.84': 403,
+     '10.02': 404,
+     '10.19': 404,
+     '10.37': 405,
+     '10.54': 405,
+     '10.72': 406,
+     '10.90': 407,
+     '11.07': 407 },
+  '16':
+   { '0': 293,
+     '1.75': '299',
+     '11.03': '331',
+     '0.00': 293,
+     '0.18': 294,
+     '0.35': 294,
+     '0.53': 295,
+     '0.70': 295,
+     '0.88': 296,
+     '1.05': 297,
+     '1.23': 297,
+     '1.41': 298,
+     '1.58': 298,
+     '1.76': 299,
+     '1.93': 300,
+     '2.11': 300,
+     '2.28': 301,
+     '2.46': 301,
+     '2.64': 302,
+     '2.81': 303,
+     '2.99': 303,
+     '3.16': 304,
+     '3.34': 304,
+     '3.51': 305,
+     '3.69': 306,
+     '3.87': 306,
+     '4.04': 307,
+     '4.22': 308,
+     '4.39': 308,
+     '4.57': 309,
+     '4.74': 309,
+     '4.92': 310,
+     '5.10': 311,
+     '5.27': 311,
+     '5.45': 312,
+     '5.62': 312,
+     '5.80': 313,
+     '5.97': 314,
+     '6.15': 314,
+     '6.33': 315,
+     '6.50': 315,
+     '6.68': 316,
+     '6.85': 317,
+     '7.03': 317,
+     '7.20': 318,
+     '7.38': 318,
+     '7.56': 319,
+     '7.73': 320,
+     '7.91': 320,
+     '8.08': 321,
+     '8.26': 321,
+     '8.44': 322,
+     '8.61': 323,
+     '8.79': 323,
+     '8.96': 324,
+     '9.14': 324,
+     '9.31': 325,
+     '9.49': 326,
+     '9.67': 326,
+     '9.84': 327,
+     '10.02': 328,
+     '10.19': 328,
+     '10.37': 329,
+     '10.54': 329,
+     '10.72': 330,
+     '10.90': 331,
+     '11.07': 331 },
+  '18':
+   { '0': 258,
+     '1.75': '260',
+     '11.03': '271',
+     '0.00': 258,
+     '0.18': 258,
+     '0.35': 258,
+     '0.53': 259,
+     '0.70': 259,
+     '0.88': 259,
+     '1.05': 259,
+     '1.23': 259,
+     '1.41': 260,
+     '1.58': 260,
+     '1.76': 260,
+     '1.93': 260,
+     '2.11': 260,
+     '2.28': 261,
+     '2.46': 261,
+     '2.64': 261,
+     '2.81': 261,
+     '2.99': 261,
+     '3.16': 262,
+     '3.34': 262,
+     '3.51': 262,
+     '3.69': 262,
+     '3.87': 263,
+     '4.04': 263,
+     '4.22': 263,
+     '4.39': 263,
+     '4.57': 263,
+     '4.74': 264,
+     '4.92': 264,
+     '5.10': 264,
+     '5.27': 264,
+     '5.45': 264,
+     '5.62': 265,
+     '5.80': 265,
+     '5.97': 265,
+     '6.15': 265,
+     '6.33': 265,
+     '6.50': 266,
+     '6.68': 266,
+     '6.85': 266,
+     '7.03': 266,
+     '7.20': 266,
+     '7.38': 267,
+     '7.56': 267,
+     '7.73': 267,
+     '7.91': 267,
+     '8.08': 268,
+     '8.26': 268,
+     '8.44': 268,
+     '8.61': 268,
+     '8.79': 268,
+     '8.96': 269,
+     '9.14': 269,
+     '9.31': 269,
+     '9.49': 269,
+     '9.67': 269,
+     '9.84': 270,
+     '10.02': 270,
+     '10.19': 270,
+     '10.37': 270,
+     '10.54': 270,
+     '10.72': 271,
+     '10.90': 271,
+     '11.07': 271 },
+  '20':
+   { '0': 183,
+     '1.75': '189',
+     '11.03': '222',
+     '0.00': 183,
+     '0.18': 184,
+     '0.35': 184,
+     '0.53': 185,
+     '0.70': 185,
+     '0.88': 186,
+     '1.05': 187,
+     '1.23': 187,
+     '1.41': 188,
+     '1.58': 188,
+     '1.76': 189,
+     '1.93': 190,
+     '2.11': 190,
+     '2.28': 191,
+     '2.46': 192,
+     '2.64': 192,
+     '2.81': 193,
+     '2.99': 193,
+     '3.16': 194,
+     '3.34': 195,
+     '3.51': 195,
+     '3.69': 196,
+     '3.87': 197,
+     '4.04': 197,
+     '4.22': 198,
+     '4.39': 198,
+     '4.57': 199,
+     '4.74': 200,
+     '4.92': 200,
+     '5.10': 201,
+     '5.27': 202,
+     '5.45': 202,
+     '5.62': 203,
+     '5.80': 203,
+     '5.97': 204,
+     '6.15': 205,
+     '6.33': 205,
+     '6.50': 206,
+     '6.68': 207,
+     '6.85': 207,
+     '7.03': 208,
+     '7.20': 208,
+     '7.38': 209,
+     '7.56': 210,
+     '7.73': 210,
+     '7.91': 211,
+     '8.08': 212,
+     '8.26': 212,
+     '8.44': 213,
+     '8.61': 213,
+     '8.79': 214,
+     '8.96': 215,
+     '9.14': 215,
+     '9.31': 216,
+     '9.49': 217,
+     '9.67': 217,
+     '9.84': 218,
+     '10.02': 218,
+     '10.19': 219,
+     '10.37': 220,
+     '10.54': 220,
+     '10.72': 221,
+     '10.90': 222,
+     '11.07': 222 },
+  '22':
+   { '0': 150,
+     '1.75': '154',
+     '11.03': '174',
+     '0.00': 150,
+     '0.18': 150,
+     '0.35': 151,
+     '0.53': 151,
+     '0.70': 152,
+     '0.88': 152,
+     '1.05': 152,
+     '1.23': 153,
+     '1.41': 153,
+     '1.58': 154,
+     '1.76': 154,
+     '1.93': 154,
+     '2.11': 155,
+     '2.28': 155,
+     '2.46': 156,
+     '2.64': 156,
+     '2.81': 156,
+     '2.99': 157,
+     '3.16': 157,
+     '3.34': 157,
+     '3.51': 158,
+     '3.69': 158,
+     '3.87': 159,
+     '4.04': 159,
+     '4.22': 159,
+     '4.39': 160,
+     '4.57': 160,
+     '4.74': 160,
+     '4.92': 161,
+     '5.10': 161,
+     '5.27': 162,
+     '5.45': 162,
+     '5.62': 162,
+     '5.80': 163,
+     '5.97': 163,
+     '6.15': 163,
+     '6.33': 164,
+     '6.50': 164,
+     '6.68': 165,
+     '6.85': 165,
+     '7.03': 165,
+     '7.20': 166,
+     '7.38': 166,
+     '7.56': 167,
+     '7.73': 167,
+     '7.91': 167,
+     '8.08': 168,
+     '8.26': 168,
+     '8.44': 168,
+     '8.61': 169,
+     '8.79': 169,
+     '8.96': 170,
+     '9.14': 170,
+     '9.31': 170,
+     '9.49': 171,
+     '9.67': 171,
+     '9.84': 171,
+     '10.02': 172,
+     '10.19': 172,
+     '10.37': 173,
+     '10.54': 173,
+     '10.72': 173,
+     '10.90': 174,
+     '11.07': 174 },
+  '24':
+   { '0': 91,
+     '1.75': '99',
+     '11.03': '141',
+     '0.00': 91,
+     '0.18': 92,
+     '0.35': 93,
+     '0.53': 93,
+     '0.70': 94,
+     '0.88': 95,
+     '1.05': 96,
+     '1.23': 97,
+     '1.41': 97,
+     '1.58': 98,
+     '1.76': 99,
+     '1.93': 100,
+     '2.11': 101,
+     '2.28': 101,
+     '2.46': 102,
+     '2.64': 103,
+     '2.81': 104,
+     '2.99': 105,
+     '3.16': 105,
+     '3.34': 106,
+     '3.51': 107,
+     '3.69': 108,
+     '3.87': 109,
+     '4.04': 109,
+     '4.22': 110,
+     '4.39': 111,
+     '4.57': 112,
+     '4.74': 113,
+     '4.92': 113,
+     '5.10': 114,
+     '5.27': 115,
+     '5.45': 116,
+     '5.62': 117,
+     '5.80': 117,
+     '5.97': 118,
+     '6.15': 119,
+     '6.33': 120,
+     '6.50': 120,
+     '6.68': 121,
+     '6.85': 122,
+     '7.03': 123,
+     '7.20': 124,
+     '7.38': 124,
+     '7.56': 125,
+     '7.73': 126,
+     '7.91': 127,
+     '8.08': 128,
+     '8.26': 128,
+     '8.44': 129,
+     '8.61': 130,
+     '8.79': 131,
+     '8.96': 132,
+     '9.14': 132,
+     '9.31': 133,
+     '9.49': 134,
+     '9.67': 135,
+     '9.84': 136,
+     '10.02': 136,
+     '10.19': 137,
+     '10.37': 138,
+     '10.54': 139,
+     '10.72': 140,
+     '10.90': 140,
+     '11.07': 141 },
+  '26':
+   { '0': '9',
+     '1.75': '9',
+     '11.03': '99',
+     '0.00': 9,
+     '0.18': 9,
+     '0.35': 9,
+     '0.53': 9,
+     '0.70': 9,
+     '0.88': 9,
+     '1.05': 9,
+     '1.23': 9,
+     '1.41': 9,
+     '1.58': 9,
+     '1.76': 9,
+     '1.93': 11,
+     '2.11': 12,
+     '2.28': 14,
+     '2.46': 16,
+     '2.64': 18,
+     '2.81': 19,
+     '2.99': 21,
+     '3.16': 23,
+     '3.34': 24,
+     '3.51': 26,
+     '3.69': 28,
+     '3.87': 30,
+     '4.04': 31,
+     '4.22': 33,
+     '4.39': 35,
+     '4.57': 36,
+     '4.74': 38,
+     '4.92': 40,
+     '5.10': 41,
+     '5.27': 43,
+     '5.45': 45,
+     '5.62': 47,
+     '5.80': 48,
+     '5.97': 50,
+     '6.15': 52,
+     '6.33': 53,
+     '6.50': 55,
+     '6.68': 57,
+     '6.85': 58,
+     '7.03': 60,
+     '7.20': 62,
+     '7.38': 64,
+     '7.56': 65,
+     '7.73': 67,
+     '7.91': 69,
+     '8.08': 70,
+     '8.26': 72,
+     '8.44': 74,
+     '8.61': 76,
+     '8.79': 77,
+     '8.96': 79,
+     '9.14': 81,
+     '9.31': 82,
+     '9.49': 84,
+     '9.67': 86,
+     '9.84': 87,
+     '10.02': 89,
+     '10.19': 91,
+     '10.37': 93,
+     '10.54': 94,
+     '10.72': 96,
+     '10.90': 98,
+     '11.07': 99 } };
 
                 const byField = field => (a, b) =>
                     a[field] - b[field];
@@ -32,16 +778,8 @@
                     name, ...Object.entries(points)
                         .sort(byField(0))
                         .map(([dist, depth]) =>
-                            depth)
+                            800-depth)
                 ]);
-
-            const stationX = Object.entries(
-                Object.entries(bands)[0][1])
-                .sort(byField(0))
-                .map(([dist, depth]) =>
-                    parseFloat(dist))
-
-            console.log(stationX);
 
             console.log(bandRows);
 
@@ -71,54 +809,10 @@
                 2.99: 662,
                 3.16: 715,
                 3.34: 751,
-                3.51: 784,
-                3.69: 830,
-                3.87: 845,
-                4.04: 856,
-                4.22: 911,
-                4.39: 947,
-                4.57: 976,
-                4.74: 1001,
-                4.92: 984,
-                5.10: 1084,
-                5.27: 1109,
-                5.45: 1145,
-                5.62: 1256,
-                5.80: 1312,
-                5.97: 1375,
-                6.15: 1442,
-                6.33: 1510,
-                6.50: 1542,
-                6.68: 1589,
-                6.85: 1638,
-                7.03: 1621,
-                7.20: 1685,
-                7.38: 1730,
-                7.56: 1728,
-                7.73: 1792,
-                7.91: 1887,
-                8.08: 1901,
-                8.26: 1980,
-                8.44: 2049,
-                8.61: 2090,
-                8.79: 2169,
-                8.96: 2169,
-                9.14: 2062,
-                9.31: 2147,
-                9.49: 2334,
-                9.67: 2280,
-                9.84: 2321,
-                10.02: 2427,
-                10.19: 2484,
-                10.37: 2492,
-                10.54: 2517,
-                10.72: 2542,
-                10.90: 2549,
-                11.03: 2579,
-                11.07: 2588
+                3.51: 784
             };
 
-            const floorVals = Object.values(floor);
+            const floorVals = Object.values(floor).map(x => 800-x);
 
             const entriesToMap = (map, [key, value]) => {
                 map[key] = value;
@@ -129,30 +823,51 @@
 
             const config = {
                 bindto: "#chart",
+                size: {
+                    height: 500
+                },
                 data: {
-                    xs: [
-                            ...bandNames.map(name =>
-                                [name, "stationX"]),
-                            ["floor", "x"]
-                        ].reduce(entriesToMap, {}),
+                    x: "x",
                     columns: [
                         ["x", ...xVals],
-                        ["stationX", ...stationX],
                         ...bandRows,
                         ["floor", ...floorVals]
                     ],
+                    order: (a, b) => {
+                        return parseInt(b.id) - parseInt(a.id);
+                    },
                     // "line", "spline", "step", "area", "area-step" are also available to stack
                     types: [
-                        ...bandNames.map(name => [name, "area"]),
-                        ["floor", "area"]
+                        ["floor", "area"],
+                        ...bandNames.map(name => [name, "area"])
                     ].reduce(entriesToMap, {}),
-                    groups: [[...bandNames, "floor"]]
-                }
+                    // groups: [[...bandNames]]
+                },
+                // area: {
+                //     zerobased: false
+                // },
+                // axis: {
+                //     y: {
+                //         inverted: true
+                //     }
+                // }
             };
 
             console.log(config);
 
             var chart = c3.generate(config);
+
+            $(".c3-target-floor path").css({
+                opacity: 1,
+                fill: "#7e7d6a"
+            });
+
+            $(".c3-circles-floor circle").css({
+                fill: "#c4c3a6"
+            });
+            $(".c3-lines-floor path").css({
+                stroke: "#c4c3a6"
+            });
         </script>
     </body>
 </html>
