--- a/transects/transects.html
+++ b/transects/transects.html
@@ -43,6 +43,10 @@
         <div id="chart"></div>
 
         <script type="text/javascript">
+
+            //TODO: fix x ticks
+            //TODO: label axes
+            //TODO: move legend to right and make ranges
             const byField = field => (a, b) =>
                 a[field] - b[field];
 
